# essay-writer

./: .gitignore  README.md  pyproject.toml
ethics/: main.py  settings.py
ethics/data/: essay.txt  task.md  theory.md
