[tool.poetry]
name = "ethics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.4"
langchain-openai = "^0.2.10"
pydantic = "^2.10.2"
pydantic-settings = "^2.6.1"
langgraph = "^0.2.53"

[tool.poetry.scripts]
ethics = "ethics.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
